# DSA-PROJECT

./: CMakeLists.txt  Main.cpp  Qt_Includes.h  users.json  words.json
Function_Files/: Function.cpp  Function.h
GUI/: AboutWindow.cpp  AboutWindow.h  Gui_Holder.cpp  Gui_Holder.h  LoadingScreen.cpp  LoadingScreen.h  UserProfileWindow.cpp  UserProfileWindow.h  WordDetailWindow.cpp  WordDetailWindow.h
User_Files/: User.h  UserDialog.cpp  UserDialog.h  UserStorage.cpp  UserStorage.h
Word_Files/: Word_Storage.cpp  Word_Storage.h
resources/: icons.qrc
users/: Lester Anastacio.json  Test_User.json
